[gd_scene load_steps=12 format=2]

[ext_resource path="res://FlyingCamera.gd" type="Script" id=1]
[ext_resource path="res://TitleScreen.tres" type="Environment" id=2]
[ext_resource path="res://moon.png" type="Texture" id=3]
[ext_resource path="res://Treasure Seeker Title.png" type="Texture" id=4]
[ext_resource path="res://PressSpace.png" type="Texture" id=5]
[ext_resource path="res://TitleScreen.gd" type="Script" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type spatial;

uniform sampler2D height_map;
uniform float height_scale = 10.0;

vec3 getNormal(vec2 uv, float texelSize) {
	float t = texture(height_map, uv + vec2(texelSize * vec2(0.0, -1.0))).r * height_scale;
	float r = texture(height_map, uv + vec2(texelSize * vec2(1.0, 0.0))).r * height_scale;
	float l = texture(height_map, uv + vec2(texelSize * vec2(-1.0, 0.0))).r * height_scale;
	float b = texture(height_map, uv + vec2(texelSize * vec2(0.0, 1.0))).r * height_scale;
	
	return -normalize(vec3(2.0 * (r - l), 2.0 * (b - t), -4.0));
}

void vertex() {
	float height = texture(height_map, UV).x * height_scale;
	VERTEX.y += height;
	NORMAL = getNormal(UV, 1.0 / float(textureSize(height_map, 0).x));
}"

[sub_resource type="OpenSimplexNoise" id=2]
seed = 3
octaves = 9

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/height_scale = 10.0
shader_param/height_map = SubResource( 3 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 100, 120 )
subdivide_width = 1000
subdivide_depth = 1000

[node name="TitleScreen" type="Spatial"]

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 89, 0, 0 )
mesh = SubResource( 5 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 178, 0, 0 )
mesh = SubResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -43.0554, 8.11969, 0 )
environment = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Moon" type="TextureRect" parent="."]
margin_left = 484.0
margin_top = 230.0
margin_right = 1465.0
margin_bottom = 1212.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Title" type="TextureRect" parent="."]
margin_left = -13.0
margin_top = 413.0
margin_right = 487.0
margin_bottom = 613.0
texture = ExtResource( 4 )

[node name="PressSpace" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 506.0
margin_top = 534.0
margin_right = 971.0
margin_bottom = 585.0
texture = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="HTTP" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GetZAMA" type="Button" parent="UI"]
visible = false
margin_left = 903.0
margin_top = 561.0
margin_right = 1007.0
margin_bottom = 587.0
mouse_default_cursor_shape = 2
text = "Get ZAMA"

[node name="FaucetBackground" type="ColorRect" parent="UI"]
visible = false
margin_left = 742.0
margin_top = 351.0
margin_right = 954.0
margin_bottom = 573.0
color = Color( 0, 0, 0, 1 )

[node name="Address" type="LineEdit" parent="UI/FaucetBackground"]
margin_left = 11.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 34.0

[node name="Prompt" type="Label" parent="UI/FaucetBackground"]
margin_left = 38.0
margin_top = 86.0
margin_right = 177.0
margin_bottom = 168.0
text = "Clicking confirm will
open the following
URL:

https://faucet.zama.ai"

[node name="Confirm" type="Button" parent="UI/FaucetBackground"]
margin_left = 47.0
margin_top = 179.0
margin_right = 162.0
margin_bottom = 205.0
mouse_default_cursor_shape = 2
text = "Confirm"

[node name="CopyAddress" type="Button" parent="UI/FaucetBackground"]
margin_left = 47.0
margin_top = 45.0
margin_right = 162.0
margin_bottom = 71.0
mouse_default_cursor_shape = 2
text = "Copy Address"

[node name="Fadeout" type="ColorRect" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1081.0
margin_bottom = 646.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Background" type="ColorRect" parent="UI/Fadeout"]
visible = false
margin_left = 384.0
margin_top = 200.0
margin_right = 653.0
margin_bottom = 388.0
color = Color( 0, 0, 0, 1 )

[node name="Waiting" type="Label" parent="UI/Fadeout/Background"]
visible = false
margin_left = 67.0
margin_top = 90.0
margin_right = 230.0
margin_bottom = 137.0
text = "Waiting for opponent..."

[node name="MatchResolution" type="ColorRect" parent="UI"]
visible = false
margin_left = 699.0
margin_top = 287.0
margin_right = 919.0
margin_bottom = 426.0
color = Color( 0, 0, 0, 1 )

[node name="Result" type="Label" parent="UI/MatchResolution"]
margin_left = 48.0
margin_top = 40.0
margin_right = 163.0
margin_bottom = 91.0
text = "You won!

+1 points"
align = 1

[node name="DebugMenu" type="ColorRect" parent="."]
visible = false
margin_left = 337.0
margin_top = 89.0
margin_right = 724.0
margin_bottom = 470.0
color = Color( 0, 0, 0, 1 )

[node name="Address" type="LineEdit" parent="DebugMenu"]
margin_left = 40.0
margin_top = 49.0
margin_right = 345.0
margin_bottom = 84.0
editable = false

[node name="Balance" type="Label" parent="DebugMenu"]
margin_left = 40.0
margin_top = 20.0
margin_right = 261.0
margin_bottom = 48.0
text = "ZAMA Balance: 0"

[node name="Copy" type="Button" parent="DebugMenu"]
margin_left = 142.0
margin_top = 99.0
margin_right = 242.0
margin_bottom = 122.0
mouse_default_cursor_shape = 2
text = "Copy"

[node name="Faucet" type="Button" parent="DebugMenu"]
margin_left = 142.0
margin_top = 137.0
margin_right = 242.0
margin_bottom = 160.0
mouse_default_cursor_shape = 2
text = "Faucet"

[node name="ExitQueue" type="Button" parent="DebugMenu"]
margin_left = 40.0
margin_top = 215.0
margin_right = 140.0
margin_bottom = 238.0
mouse_default_cursor_shape = 2
text = "Exit Queue"

[node name="EndGame" type="Button" parent="DebugMenu"]
margin_left = 40.0
margin_top = 266.0
margin_right = 140.0
margin_bottom = 289.0
mouse_default_cursor_shape = 2
text = "End Game"

[node name="ForceEnd" type="Button" parent="DebugMenu"]
margin_left = 40.0
margin_top = 318.0
margin_right = 140.0
margin_bottom = 341.0
mouse_default_cursor_shape = 2
text = "Force End"

[node name="Close" type="Button" parent="DebugMenu"]
margin_left = 264.0
margin_top = 341.0
margin_right = 364.0
margin_bottom = 364.0
mouse_default_cursor_shape = 2
text = "Close"

[node name="Label" type="Label" parent="DebugMenu"]
margin_left = 40.0
margin_top = 181.0
margin_right = 201.0
margin_bottom = 221.0
rect_scale = Vector2( 1.2, 1.2 )
text = "DEBUG"
